app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karpenter-sqs-subscriber
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: karpenter-sqs-subscriber
  template:
    metadata:
      labels:
        app: karpenter-sqs-subscriber
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: zonal-autoshift-karpenter
                operator: In
                values:
                - karpenter
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: karpenter-sqs-subscriber
            topologyKey: topology.kubernetes.io/zone
      dnsConfig:
        nameservers:
          - 8.8.8.8
      serviceAccountName: karpenter-sqs-subscriber
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
      containers:
        - name: karpenter-sqs-subscriber
          image:  $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/zonalautoshiftkarpenter
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10000
            capabilities:
              drop:
                - ALL
              add: []
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: log-volume
              mountPath: /var/log
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
      volumes:
        - name: log-volume
          emptyDir:
            medium: Memory
